@@ -840,6 +840,35 @@ os.environ['INSTALL'] = os.path.join(os.environ['HOME'],
 
     </section>
 
+    <section id="command-reference-rdepends">
+      <title>rdepends</title>
+
+      <para>The <command>rdepends</command> command is used to show the
+      reverse-dependencies of a module.</para>
+
+      <cmdsynopsis>
+	<command>jhbuild rdepends</command>
+	<arg>module</arg>
+      </cmdsynopsis>
+
+      <variablelist>
+	<varlistentry>
+	  <term><option>--dependencies</option></term>
+	  <listitem>
+	    <simpara>Show dependency path next to modules.</simpara>
+	  </listitem>
+	</varlistentry>
+
+	<varlistentry>
+	  <term><option>--direct</option></term>
+	  <listitem>
+	    <simpara>Limit display to modules directly depending on given
+            module.</simpara>
+	  </listitem>
+	</varlistentry>
+      </variablelist>
+    </section>
+
     <section id="command-reference-run">
       <title>run</title>
 
