@@ -1,5 +1,9 @@
 2008-01-16  Frederic Peters  <fpeters@0d.be>
 
+	* doc/C/jhbuild.xml: added rdepends command documentation.
+
+2008-01-16  Frederic Peters  <fpeters@0d.be>
+
 	* doc/C/jhbuild.xml: added sections about cmake and waf module types.
 
 2008-01-16  Frederic Peters  <fpeters@0d.be>
